--- a/usr/vibrantmtd_initramfs/jb_init/init.aries.rc
+++ b/usr/vibrantmtd_initramfs/jb_init/init.aries.rc
@@ -19,9 +19,6 @@ on init
     # FIXME: Remove emmc?
     mkdir /datadata 0771 system system
 
-    # Increase read ahead on moviNAND
-    write /sys/devices/virtual/bdi/179:0/read_ahead_kb 1024
-
     # Disable address randomization
     write /proc/sys/kernel/randomize_va_space 0
 
@@ -46,9 +43,14 @@ on boot
     setprop ro.telephony.call_ring.multiple 0
 
 on fs
+# LVM: set up LVM volumes
+    exec /lvm/sbin/lvm vgscan --mknodes --ignorelockingfailure
+    exec /lvm/sbin/lvm vgchange -aly --ignorelockingfailure
+
     mkdir /radio 0775 radio radio
     mount yaffs2 mtd@radio /radio
     mount yaffs2 mtd@datadata /datadata
+    mount_all fstab.aries
 
     chown radio radio /radio/modem.bin
 
@@ -58,15 +60,6 @@ on fs
     chown radio radio /efs
     chmod 770 /efs/bluetooth
     chmod 770 /efs/imei
-
-# LVM: Wait for mmc block devices to become available, then set up LVM volumes
-    wait /dev/block/mmcblk0
-    start lvm_vgscan
-    start lvm_vgchange
-
-# LVM: Mount volumes once they become available
-    mount ext4 /dev/lvpool/system /system wait ro
-    mount ext4 /dev/lvpool/userdata /data wait noatime nosuid nodev nomblk_io_submit
 
 # permissions for bluetooth.
     chown bluetooth bluetooth /dev/s3c2410_serial0
@@ -83,9 +76,7 @@ on fs
     chmod 660 /sys/class/sec/uart_switch/UART_SEL/value
 
 on post-fs
-
-   # We chown/chmod /datadata again so because mount is run as root + defaults    
-    chown system system /datadata    
+    chown system system /datadata
     chmod 0771 /datadata
 
     #symlinks for samsung RIL
@@ -99,24 +90,15 @@ on post-fs
     chown root system /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
     chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
 
+# trigger governor change uevent
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor ondemand
+
 on post-fs-data
+    # for migrating download provider's cache out of the small /data/data
+    mkdir /data/data2 0771 system system
 
-    # for migrating download provider's cache out of the small /data/data    
-    mkdir /data/data2 0771 system system   
-
-    # setup datadata    
+    # setup datadata
     exec /sbin/setupdatadata.sh
-
-    #boot-patch
-    exec /sbin/boot-patch.sh
-
-   #create data/gps for gps daemon
-    mkdir /data/gps 775 gps system
-    chown gps system /data/gps
-    chown gps gps /sys/class/sec/gps/GPS_PWR_EN/value
-    chmod 664 /sys/class/sec/gps/GPS_PWR_EN/value
-    chown gps gps /sys/class/sec/gps/GPS_nRST/value
-    chmod 664 /sys/class/sec/gps/GPS_nRST/value
 
     # wi-fi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
@@ -130,19 +112,6 @@ on post-fs-data
     chmod 0775 /data/log
 
     setprop vold.post_fs_data_done 1
-
-# LVM services
-# Scan for LVM physical volumes and set up volume groups
-service lvm_vgscan /lvm/sbin/lvm vgscan --mknodes --ignorelockingfailure
-    class core
-    disabled
-    oneshot
-
-# Activate LVM logical volumes in found volume groups
-service lvm_vgchange /lvm/sbin/lvm vgchange -aly --ignorelockingfailure
-    class core
-    disabled
-    oneshot
 
 service aries-ril-daemon /system/bin/rild
     class core
@@ -250,27 +219,22 @@ service bugreport /system/bin/dumpstate -d -v -o /sdcard/bugreports/bugreport
     keycodes 114 115 116
 
 service orientationd /system/vendor/bin/orientationd
-    class main
+    class late_start
     user compass
     group system input
     disabled
 
 service geomagneticd /system/vendor/bin/geomagneticd
-    class main
+    class late_start
     user compass
     group system input
 
 service tvout /system/bin/tvoutserver
-    class main
+    class late_start
     user system
     group graphics
-    disabled
-# FIXME (disabled): ABI borked
 
 service tvouthack /system/bin/tvouthack
     user system
     group graphics
     disabled
-
-on property:dev.bootcomplete=1
-	start tvout
