--- a/arch/arm/configs/aries_captivatemtd_defconfig
+++ b/arch/arm/configs/aries_captivatemtd_defconfig
@@ -278,6 +278,7 @@ CONFIG_BLK_DEV_DM=y
 CONFIG_DM_DEBUG=y
 CONFIG_DM_CRYPT=y
 CONFIG_DM_UEVENT=y
+CONFIG_DM_SNAPSHOT=y
 CONFIG_NETDEVICES=y
 CONFIG_IFB=y
 CONFIG_TUN=y
